--- a/index.css
+++ b/index.css
@@ -1,28 +1,19 @@
-* {
-    box-sizing: border-box;
-    
-}
 body {
-    margin: 0px;
-    background-color: beige;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
 }
-
-.centerDiv {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+.button {
+    display: inline-block;
+    margin: 20px;
+    padding: 20px 40px;
+    font-size: 1.5rem;
+    background-color: #007bff;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
-    background-color: rgb(128, 189, 242);
+    text-decoration: none;
+    border-radius: 10px;
+    transition: 0.3s;
 }
-
-#imageDiv {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+.button:hover {
+    background-color: #0056b3;
 }
